{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 27,
  "lineage": "057ec45a-799c-4a3b-7db4-cf7c73161d5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:862348860810:loadbalancer/nginx-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-elb-999560994.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-00ff9d5f81735c668",
              "i-0664bd9bf5b61e9a8",
              "i-0c04ab23562bf2dc3"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "nginx-elb",
            "security_groups": [
              "sg-005cce903f6c1344a"
            ],
            "source_security_group": "862348860810/nginx-elb-sg",
            "source_security_group_id": "sg-005cce903f6c1344a",
            "subnets": [
              "subnet-017a8ad142fcf1c70",
              "subnet-0f97751b68ace7d05"
            ],
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-elb"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.nginx1",
            "aws_instance.nginx2",
            "aws_instance.nginx3",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.allow_ssh",
            "aws_security_group.elb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "data.aws_ami.aws-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07c6123f671705784",
            "arn": "arn:aws:ec2:us-east-1:862348860810:instance/i-0664bd9bf5b61e9a8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx-profile",
            "id": "i-0664bd9bf5b61e9a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "btk-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00ed5b8f00926abe7",
            "private_dns": "ip-10-1-0-78.ec2.internal",
            "private_ip": "10.1.0.78",
            "public_ip": "54.162.111.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-022c2bf221467d2b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017a8ad142fcf1c70",
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-nginx1"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00c2d35f909d92bc8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07c6123f671705784",
            "arn": "arn:aws:ec2:us-east-1:862348860810:instance/i-0c04ab23562bf2dc3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx-profile",
            "id": "i-0c04ab23562bf2dc3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "btk-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ced7cdba0fbf7391",
            "private_dns": "ip-10-1-1-160.ec2.internal",
            "private_ip": "10.1.1.160",
            "public_ip": "44.215.68.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04445c3b41de797d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f97751b68ace7d05",
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-nginx2"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00c2d35f909d92bc8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07c6123f671705784",
            "arn": "arn:aws:ec2:us-east-1:862348860810:instance/i-00ff9d5f81735c668",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx-profile",
            "id": "i-00ff9d5f81735c668",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "btk-terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0142b964229c5d40a",
            "private_dns": "ip-10-1-1-48.ec2.internal",
            "private_ip": "10.1.1.48",
            "public_ip": "3.231.105.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1db1dd65ef8e05e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f97751b68ace7d05",
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-nginx3"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-nginx3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00c2d35f909d92bc8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet2",
            "data.aws_ami.aws-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862348860810:internet-gateway/igw-046c2b1692203c69e",
            "id": "igw-046c2b1692203c69e",
            "owner_id": "862348860810",
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0932115bbde4cb95c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862348860810:route-table/rtb-022143f86c362db3e",
            "id": "rtb-022143f86c362db3e",
            "owner_id": "862348860810",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046c2b1692203c69e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-rtb"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0932115bbde4cb95c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cbf1774ccff9035",
            "route_table_id": "rtb-022143f86c362db3e",
            "subnet_id": "subnet-017a8ad142fcf1c70"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a94e22191e4de4c",
            "route_table_id": "rtb-022143f86c362db3e",
            "subnet_id": "subnet-0f97751b68ace7d05"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862348860810:security-group/sg-00c2d35f909d92bc8",
            "description": "Allow ports for nginx demo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c2d35f909d92bc8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-demo",
            "name_prefix": "",
            "owner_id": "862348860810",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-nginx"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-0932115bbde4cb95c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862348860810:security-group/sg-005cce903f6c1344a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005cce903f6c1344a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-elb-sg",
            "name_prefix": "",
            "owner_id": "862348860810",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-elb"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0932115bbde4cb95c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862348860810:subnet/subnet-017a8ad142fcf1c70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017a8ad142fcf1c70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862348860810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-subnet1"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-subnet1"
            },
            "vpc_id": "vpc-0932115bbde4cb95c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862348860810:subnet/subnet-0f97751b68ace7d05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f97751b68ace7d05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862348860810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-subnet2"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-subnet2"
            },
            "vpc_id": "vpc-0932115bbde4cb95c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862348860810:vpc/vpc-0932115bbde4cb95c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-04ba6abd12271e20d",
            "default_route_table_id": "rtb-0146b57d7f79e222c",
            "default_security_group_id": "sg-0fcbee64c189e1a62",
            "dhcp_options_id": "dopt-44c3d93e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0932115bbde4cb95c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0146b57d7f79e222c",
            "owner_id": "862348860810",
            "tags": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "BillingCode": "0917380336",
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}